[package]
name = "matchbox-client-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
futures-timer = "3.0.2"
lazy_static = "1.4.0"
libc = "0.2.144"
matchbox_socket = {version = "0.6.1" , features = ["ggrs"]}
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = {version = "1.28.1", features = ["full"]}
uuid = { version = "1.3.3" , features = ["v4"] }

